changed z-index for hamburger nav to fix clipping with zoomed hero img

--- a/widgets/navbar/hamburger_nav.css
+++ b/widgets/navbar/hamburger_nav.css
@@ -1,5 +1,6 @@
 app-hamburger-nav {
     position: fixed;
+    z-index: 10;
     top: var(--navbar-height);
     background-color: var(--nav);
     left: 100vw;
